feature: finish GET /v0/mail?mailbox={mailbox}
