# backend/src/app.ts
@@ -7,6 +7,9 @@ import * as OpenApiValidator from 'express-openapi-validator';
 import cors from 'cors';
 import helmet from 'helmet';
 import { get } from './dummy';
+import {
+  getAll, getByID, postMail, moveMail,
+} from './mail';
 
 // Custom error interface
 interface CustomError extends Error {
@@ -48,6 +51,12 @@ app.use(
 
 // Route for the dummy endpoint
 app.get('/v0/dummy', get);
+
+// Route for the mail endpoints
+app.get('/v0/mail', getAll);
+app.get('/v0/mail/:id', getByID);
+app.post('/v0/mail', postMail);
+app.put('/v0/mail/:id', moveMail);
 
 // Error handling middleware
 app.use((err: CustomError, req: Request, res: Response) => {
